# extract-load-transform-visualize

./: .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  Taskfile.yml  deployment.env  example.env  pyproject.toml  set_env.bat  set_env.sh
.devcontainer/: devcontainer.json
create-reports-with-evidence/: README.md  example.env
create-reports-with-evidence/pages/: issues.md  orders.md
create-reports-with-evidence/sources/databricks/: .gitignore  github_data_issue_events.sql  github_data_push_events.sql  github_data_repos.sql  github_data_users.sql  jaffle_shop_customers.sql  jaffle_shop_locations.sql  jaffle_shop_order_items.sql  jaffle_shop_orders.sql  jaffle_shop_products.sql  jaffle_shop_supplies.sql
create-reports-with-evidence/sources/needful_things/: .gitignore  explore_needful_things.ipynb
extract-and-load-with-python/: README.md  el.py
share-with-python/: README.md  read_delta_adls.py  read_delta_adls_full_path.py  test_read_delta_adls.ipynb
transform-with-dbt/: README.md  dbt_project.yml  profiles.yml
transform-with-dbt/macros/maintenance/: delete_all_data_in_databricks.sql
transform-with-dbt/models/bronze/raw/: stg_events.sql
transform-with-dbt/models/bronze/seeds/: __sources.yml
transform-with-dbt/models/bronze/sources/: github_events.sql
transform-with-dbt/models/published/: published_zone_jaffle_shop_customers.sql  publlished_zone_github_data_users.sql
transform-with-dbt/models/silver/github_data/: _properties.yml  github_data_issue_events.sql  github_data_repos.sql  (+3 more)
transform-with-dbt/seeds/: raw_items.csv  raw_orders.csv
(+8 files in other folders)
