[project]
name = "extract-load-transform-visualize"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-core>=1.34.0",
    "azure-identity>=1.23.0",
    "azure-storage-blob>=12.25.1",
    "black>=25.1.0",
    "dbt-core>=1.9.4",
    "dbt-databricks>=1.10.1",
    "dbt-duckdb>=1.9.3",
    "dbt-metricflow",
    "duckdb>=1.2.2",
    "halo>=0.0.31",
    "isort>=6.0.1",
    "jafgen>=0.4.14",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "ruff>=0.11.9",
    "sqlfluff>=3.4.0",
    "sqlfluff-templater-dbt>=3.4.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]



